[workspace]
members = ["simvonk", "zeevonk", "common"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Impossible-Robotics-5412/linkage"
authors = [
    "Koen Westendorp <koensswestendorp@gmail.com>",
    "Bauke Westendorp <baukewestendorp@gmail.com>",
]